# Blog

backend/: api.py  db.py  pyproject.toml  schema.sql  server.py  utils.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  routes.ts
frontend/src/assets/: index.css
frontend/src/components/: PostCard.vue  ThemeToggle.vue
frontend/src/components/ui/alert/: index.ts
frontend/src/lib/: utils.ts
frontend/src/stores/: session.ts  theme.ts
frontend/src/types/: post.ts
frontend/src/views/: Home.vue  LogOut.vue  Login.vue
