[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sr-pato <oie.eu.sou.um@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
bcrypt = "^4.1.2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
